--- a/src/views/clinic-panel/pages/panel/visibility.ejs
+++ b/src/views/clinic-panel/pages/panel/visibility.ejs
@@ -7,7 +7,7 @@
           hastalarınızın ilgilerini çekebilirsiniz.</div>
         <!--=====Hangi tarihlerde görünürlüğünüzü arttırmak istersiniz?=====-->
         <div class="col-sm-12 col-md-12 col-lg-7 col-xl-8 visibilty">
-          <div class="tm-section-title blue mb-0 mt-5">Hangi tarihlerde görünürlüğünüzü arttırmak İstersiniz?</div>
+          <div class="section-title blue mb-0 mt-5">Hangi tarihlerde görünürlüğünüzü arttırmak İstersiniz?</div>
           <div class="admin-inner-text">Sadece 3 adımda merkezinizin boş diyaliz cihazlarını doldurabilir ve
             hastalarınızın ilgilerini çekebilirsiniz.</div>
           <div class="dropdown-custom">
@@ -27,10 +27,9 @@
                 <option value="10">Kasım</option>
                 <option value="11">Aralık</option>
               </select>
-              <img src="../clinic-panel/images/icons/down-admin.png" alt="Down Admin Icon" class="dropdown-down" />
             </div>
           </div>
-          <div class="tm-section-title blue mb-0 mt-5">Hastalarınızın dikkatini çekmek istediğiniz lokasyonlar neler?
+          <div class="section-title blue mb-0 mt-5">Hastalarınızın dikkatini çekmek istediğiniz lokasyonlar neler?
           </div>
           <div class="admin-inner-text">Belirli lokasyonlarda ki hastaların ilgisini çekin ya da görünürlüğünüzü herkes
             için arttırın.</div>
@@ -49,7 +48,6 @@
                       <span class="tooltiptext">Seçtiğiniz ülkeyi aratan kullanıcılarda en önde görünürsünüz. </span>
                     </div>
                   </button>
-
                   <div class="dropdown-menu p-2" aria-labelledby="dropdownMenuButton">
                     <form>    
                     <div class="dropdown-item form-check">
@@ -91,8 +89,7 @@
                   <span class="checkmark"></span>
                   <div class="tooltip-custom">
                     <img src="../clinic-panel/images/icons/question-pale.png" alt="Question Icon"
-                      class="tooltip-custom" />
-                    <span class="tooltiptext">Tooltip text</span>
+                      class="tooltip-custom" /><span class="tooltiptext">Tooltip text</span>
                   </div>
                 </label>
               </div>
@@ -119,7 +116,8 @@
                 </label>
               </div>
               <div class="col">
-                <label class="custom container unselected">Ülke Seçiniz
+                <!-- <label class="custom container unselected">Ülke Seçiniz -->
+                  <label class="custom container">Ülke Seçiniz
                   <input type="radio" name="radio" />
                   <span class="checkmark"></span>
                   <div class="tooltip-custom">
@@ -131,7 +129,7 @@
               </div>
             </div>
           </div>
-          <div class="tm-section-title blue mb-0 mt-5">Fiyatlandırmalar</div>
+          <div class="section-title blue mb-0 mt-5">Fiyatlandırmalar</div>
           <div class="admin-inner-text">Seçimlerinize göre fiyatlandırma aşağıda yer almaktadır. Ulaşabileceğiniz hasta
             sayıları yalnızca öngörüdür.</div>
           <div class="row">
@@ -146,8 +144,8 @@
                 <div class="admin-inner-text mb-2">Temmuz-Ağustos aylarında, Avrupa bölgesinde geçerli olacaktır.</div>
                 <div class="tm-space-between">
                   <div>
-                    <div class="tm-font-semibold mb-1">Merkezinizin Tahmini Görüntülenme Sayısı</div>
-                    <div class="tm-color-second tm-font-semibold">250-500 Görüntülenme</div>
+                    <!-- <div class="tm-font-semibold mb-1">Merkezinizin Tahmini Görüntülenme Sayısı</div>
+                    <div class="tm-color-second tm-font-semibold">250-500 Görüntülenme</div> -->
                   </div>
                   <div class="token-number">99 Dialysis Token</div>
                 </div>
@@ -169,16 +167,14 @@
               </div>
             </div>
             <div class="tm-box-bottom">
-              <div>Kullanıcıların arattığı merkez listelerinde, seçtiğiniz bölgeye göre listede en başa çıkmak için
-                fiyat listesi aşağıdadır.</div>
+              <div>Kullanıcıların arattığı merkez listelerinde, seçtiğiniz bölgeye göre listede en başa çıkmak için fiyat listesi aşağıdadır.</div>
               <ul>
                 <li>1 Ay - 99 Dialysis Token</li>
-                <li>3 Ay- 199 Dialysis Token</li>
-                <li>6 Ay- 349 Dialysis Token</li>
-                <li>12 Ay-599 Dialysis Token</li>
+                <li>3 Ay - 199 Dialysis Token</li>
+                <li>6 Ay - 349 Dialysis Token</li>
+                <li>12 Ay - 599 Dialysis Token</li>
               </ul>
-              <div>Aynı anda farklı bölgelerde öne çıkmak isterseniz promosyonlar bölümünden size uygun promosyonu
-                seçebilirsiniz.</div>
+              <div>Aynı anda farklı bölgelerde öne çıkmak isterseniz promosyonlar bölümünden size uygun promosyonu seçebilirsiniz.</div>
             </div>
           </div>
         </div>
