change promotion page

--- a/src/views/clinic-panel/pages/panel/promotions.ejs
+++ b/src/views/clinic-panel/pages/panel/promotions.ejs
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="tm-section-title">Size Özel Promosyonlar</div>
         <div class="admin-inner-text">Size ve merkezinize özel 4 adet özel promosyon teklifimiz mevcut, hemen inceleyebilirsiniz.</div>
-        <div class="promotion-dates">Temmuz-Ağustos-Eylül 2021 döneminde geçerlidir.</div>
+        <div class="promotion-dates"> * Temmuz-Ağustos-Eylül 2021 döneminde geçerlidir.</div>
 
         <% promotions.forEach(promotion => { %>
 
