--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -141,14 +141,6 @@
 .tm-box-title {
   font-family: "Lato", sans-serif;
 }
-/* .tm-section-title {
-  font-family: "Lato", sans-serif;
-  font-size: 20px;
-  text-transform: uppercase;
-  color: #28353e;
-  margin-bottom: 30px;
-  margin-top: 10px;
-} */
 .button-choose {
   font-size: 12px !important;
   font-family: "Lato", sans-serif;
@@ -173,13 +165,6 @@
   color: #28353e !important;
   font-weight: 600;
 }
-/* .checkbox .tm-font-semibold {
-  font-size: 12px;
-  font-family: "Montserrat", sans-serif;
-  color: #28353e7a !important;
-  line-height: 1.2rem;
-  margin-top: 5px;
-} */
 .admin-inner-text {
   font-family: "Montserrat", sans-serif;
   font-size: 13px;
@@ -271,9 +256,6 @@ input#others.form-control {
   border: 2px solid #28353eb6 !important;
   padding: 10px;
 }
-/* .visibilty .tm-section-title {
-  text-transform: capitalize;
-} */
 .dropdown-custom select {
   width: 42% !important;
   padding: 8px 5px 8px 20px !important;
@@ -303,10 +285,6 @@ input#explanation1.form-control {
   font-family: "Lato", sans-serif;
   font-size: 13px;
 }
-/* .tm-font-semibold {
-  font-family: 'Khula', sans-serif !important;
-  font-size: 18px;
-} */
 .tm-color-dark {
   font-family: "Montserrat", sans-serif;
   line-height: 1.2rem;
@@ -391,8 +369,17 @@ input#explanation1.form-control {
   font-family: "Lato", sans-serif;
   font-weight: 700;
 }
+/*center-payment-options*/
+.center-payment-options {
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+}
 .section-title {
   font-size: 15px;
+  font-weight: 700;
+}
+.blue {
+  color: #025c90;
 }
 select#day {
   color: #28353e;
