--- a/src/views/clinic-panel/pages/panel/payment-options.ejs
+++ b/src/views/clinic-panel/pages/panel/payment-options.ejs
@@ -6,16 +6,19 @@
         <div class="col-sm-12 col-md-12 col-lg-7 col-xl-8">
           <form class="tm-form-wide">
             <div class="form-box">
-              <div class="title">Yurtdışından Gelen Tatil Rezervasyonları</div>
+              <div class="section-title blue">Yurtdışından Gelen Tatil Rezervasyonları</div>
               <div class="form-group not-border checkbox">
-                <div class="tm-font-semibold">Merkezinizi yurtdışından gelecek tatil diyalizi rezervasyon taleplerine
+                <div class="center-payment-options">Merkezinizi yurtdışından gelecek tatil diyalizi rezervasyon taleplerine
                   açmak ister misiniz?</div>
-                <label class="tm-switch tm-margin-b-0">
+                  <div class="form-check form-switch">
+                    <input class="form-check-input mx-2" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+                  </div>
+                <!-- <label class="tm-switch tm-margin-b-0">
                   <input type="checkbox" checked />
                   <span class="tm-slider tm-round"></span>
-                </label>
+                </label> -->
               </div>
-              <div class="title tm-margin-t-1">Yurtiçi Hastalar İçin</div>
+              <div class="section-title blue tm-margin-t-1">Yurtiçi Hastalar İçin</div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                 <label class="form-check-label selected" for="flexCheckChecked"> SSK </label>
@@ -95,7 +98,7 @@
               </div>
             </div>
             <div class="form-box">
-              <div class="title">Yurtdışı Hastaları İçin</div>
+              <div class="section-title blue">Yurtdışı Hastaları İçin</div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
                 <label class="form-check-label selected" for="flexCheckChecked"> Yurtdışı Sigortasından Direk Tahsilat
