--- a/src/views/clinic-panel/pages/panel/answer-waiting-rezervations.ejs
+++ b/src/views/clinic-panel/pages/panel/answer-waiting-rezervations.ejs
@@ -9,8 +9,7 @@
               <ul class="flex-column flex-md-row d-flex tabbar">
                 <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/answer-waiting-rezervations">Cevap
                   Bekleyen Rezervasyonlar</a>
-                <a class="flex-sm-fill text-md-center nav-link mb-2 active" aria-current="page"
-                  href="/panel/oncoming-rezervations">Yaklaşan Rezervasyonlar
+                <a class="flex-sm-fill text-md-center nav-link mb-2 active" aria-current="page" href="/panel/oncoming-rezervations">Yaklaşan Rezervasyonlar
                   <div class="tm-s-step active completed"></div>
                 </a>
                 <a class="flex-sm-fill text-md-center nav-link mb-2" href="/panel/completed-rezervations">Tamamlanan
