--- a/src/views/clinic-panel/pages/panel/calender.ejs
+++ b/src/views/clinic-panel/pages/panel/calender.ejs
@@ -14,9 +14,9 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
-          <form class="tm-form-wide">
+          <form class="tm-form-wide p-5">
             <div class="row">
-              <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+              <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 mt-3">
                 <div class="seans-title-area">
                   <div class="seans-title">Pazartesi, Salı, Çarşamba</div>
                 </div>
@@ -37,7 +37,7 @@
                   <div class="seans-date">21:30-00:30 Arasında</div>
                 </div>
               </div>
-              <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
+              <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 mt-3">
                 <div class="seans-title-area">
                   <div class="seans-title">Perşembe, Cuma, Cumartesi</div>
                 </div>
@@ -59,7 +59,7 @@
                 </div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-                <div class="seans-title-area tm-space-between">
+                <div class="seans-title-area tm-space-between mt-3">
                   <div class="seans-title">Pazar Günleri Açık mısınız?</div>
                   <div class="form-box inline-checkboxes">
                     <div class="form-group not-border checkbox">
