changed add new clinic page

--- a/src/views/clinic-panel/pages/panel/add-new-clinic.ejs
+++ b/src/views/clinic-panel/pages/panel/add-new-clinic.ejs
@@ -2,7 +2,7 @@
   <div class="content-wrapper">
     <div id="section-i" class="tm-p">
       <div class="row">
-        <div class="tm-section-title">Yenİ Tesİs Ekle</div>
+        <div class="tm-section-title">Yeni Tesis Ekle</div>
         <div class="admin-inner-text">Bu sayfada kayıtlı olan merkezlerinizi görüntüleyebilir ve yeni merkez ekleyebilirsiniz.</div>
         <div class="add-center">
           <a href="/panel/choose-personel" class="btn btn-second">Yeni Merkez Ekle</a>
@@ -14,8 +14,8 @@
             <div class="clinic-center-main-content">
               <div class="clinic-center-box-content">
                 <div class="clinic-center-info">
-                  <div class="title"><%- center.companyInformation.companyName  %> </div>
-                  <div class="tm-display-flex">
+                  <div class="clinic-name mt-2"><%- center.companyInformation.companyName  %> </div>
+                  <div class="d-flex justify-content-between mt-3 mb-1">
                     <div class="text">Arama yaptığınız konumdan 5 km uzaklıkta.</div>
                     <div class="most">Öne Çıkan Merkez</div>
                   </div>
