--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -160,8 +160,7 @@
 .text {
   font-family: "Montserrat", sans-serif;
   margin-top: 5px !important;
-  font-size: 13px;
-  line-height: 1.5rem;
+  font-size: 12px;
   color: #28353e !important;
   font-weight: 600;
 }
@@ -327,9 +326,9 @@ input#explanation1.form-control {
   padding: 10px;
 }
 .clinic-center-box-content2 .span-text{
-  font-size: 13px;
+  font-size: 12px;
   font-family: "Montserrat", sans-serif;
-  line-height: 1.2rem;
+  line-height: 1.5rem;
 }
 .most{
   font-size: 12px;
@@ -384,6 +383,13 @@ input#explanation1.form-control {
 /*rezervation*/
 .flex-sm-fill {
   font-family: "Montserrat", sans-serif;
+}
+/*add new clinic*/
+.clinic-name {
+  font-size: 15px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+  color: #025c90;
 }
 select#day {
   color: #28353e;
