--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -21,6 +21,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" />
   <!-- Google web font "Open Sans" -->
   <link rel="stylesheet" href="../user/font-awesome-4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../user/css/bootstrap.min.css" />
   <!-- inject:css -->
