--- a/src/views/clinic-panel/partials/side-bar.ejs
+++ b/src/views/clinic-panel/partials/side-bar.ejs
@@ -1,14 +1,11 @@
 <nav class="sidebar sidebar-offcanvas" id="sidebar">
   <ul class="nav">
     <li class="nav-item">
-      <a class="nav-link" href="/panel"><img src="../clinic-panel/images/icons/Home.png"
-          alt="Home Icon" /><span class="menu-title">ANA SAYFA</span> </a>
+      <a class="nav-link" href="/panel"><i class="bi bi-house-door"></i><span class="menu-title"> ANA SAYFA</span></a>
     </li>
     <!--=====Center=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#center" aria-expanded="false" aria-controls="center"> <img
-          src="../clinic-panel/images/icons/Location.png" alt="Location Icon" /><span
-          class="menu-title">MERKEZİNİZ</span><i class="menu-arrow"></i> </a>
+      <a class="nav-link" data-bs-toggle="collapse" href="#center" aria-expanded="false" aria-controls="center"> <i class="bi bi-geo-alt"></i><span class="menu-title"> MERKEZİNİZ</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="center">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"><a class="nav-link" href="/panel/upload-image">Fotoğraflar</a></li>
@@ -22,8 +19,7 @@
     </li>
     <!--=====Opportunity Center=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#opp-center" aria-expanded="false" aria-controls="opp-center">
-        <img src="../clinic-panel/images/icons/Star.png" alt="Star Icon" /><span class="menu-title">FIRSAT MERKEZİ</span><i class="menu-arrow"></i> </a>
+      <a class="nav-link" data-bs-toggle="collapse" href="#opp-center" aria-expanded="false" aria-controls="opp-center"><i class="bi bi-star"></i><span class="menu-title"> FIRSAT MERKEZİ</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="opp-center">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"><a class="nav-link" href="/panel/visibility">Görünürlük Arttırma</a></li>
@@ -33,19 +29,15 @@
     </li>
     <!--=====Payment=====-->
     <li class="nav-item">
-      <a class="nav-link" href="/panel/payment-options"> <img src="../clinic-panel/images/icons/Payment.png"
-          alt="Payment Icon" /><span class="menu-title">ÖDEME ŞEKİLLERİ</span> </a>
+      <a class="nav-link" href="/panel/payment-options"><i class="bi bi-arrow-repeat"></i><span class="menu-title"> ÖDEME ŞEKİLLERİ</span> </a>
     </li>
     <!--=====Rezervations=====-->
     <li class="nav-item">
-      <a class="nav-link" href="/panel/answer-waiting-rezervations"> <img
-          src="../clinic-panel/images/icons/Document.png" alt="Document Icon" /><span
-          class="menu-title">REZERVASYONLAR</span> </a>
+      <a class="nav-link" href="/panel/answer-waiting-rezervations"><i class="bi bi-file-earmark-text"></i><span class="menu-title"> REZERVASYONLAR</span> </a>
     </li>
     <!--=====Incoming Box=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#inbox" aria-expanded="false" aria-controls="inbox"> <img
-          src="../clinic-panel/images/icons/Message.png" alt="Message Icon" /><span class="menu-title">GELEN KUTUSU</span><i class="menu-arrow"></i> </a>
+      <a class="nav-link" data-bs-toggle="collapse" href="#inbox" aria-expanded="false" aria-controls="inbox"><i class="bi bi-envelope"></i><span class="menu-title"> GELEN KUTUSU</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="inbox">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"><a class="nav-link" href="/panel/rezervation-messages">Rezervasyon Mesajları</a></li>
@@ -57,15 +49,12 @@
     </li>
     <!--=====Cleander=====-->
     <li class="nav-item">
-      <a class="nav-link" href="/panel/calender">
-        <img src="../clinic-panel/images/icons/Calendar.png" alt="Calendar Icon" />
-        <span class="menu-title">TAKVİM</span>
+      <a class="nav-link" href="/panel/calender"><i class="bi bi-calendar-week"></i><span class="menu-title"> TAKVİM</span>
       </a>
     </li>
     <!--=====Analysis=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#analysis" aria-expanded="false" aria-controls="analysis">
-        <img src="../clinic-panel/images/icons/Chart.png" alt="Chart Icon" /><span class="menu-title">ANALİZLER</span><i
+      <a class="nav-link" data-bs-toggle="collapse" href="#analysis" aria-expanded="false" aria-controls="analysis"><i class="bi bi-clipboard2-data"></i><span class="menu-title"> ANALİZLER</span><i
           class="menu-arrow"></i> </a>
       <div class="collapse" id="analysis">
         <ul class="nav flex-column sub-menu">
@@ -76,8 +65,7 @@
     </li>
     <!--=====Setting=====-->
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#settings" aria-expanded="false" aria-controls="settings">
-        <img src="../clinic-panel/images/icons/Setting.png" alt="Setting Icon" />
+      <a class="nav-link" data-bs-toggle="collapse" href="#settings" aria-expanded="false" aria-controls="settings"><i class="bi bi-gear"></i>
         <span class="menu-title">AYARLAR</span>
         <i class="menu-arrow"></i>
       </a>
