--- a/public/user/css/panel.css
+++ b/public/user/css/panel.css
@@ -1,4 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Khula&family=Lato&family=Montserrat&family=Roboto&display=swap');
+/*SİDEBAR*/
+/* #sidebar {
+  font-family: "Lato", sans-serif;
+}
+#sidebar a:visited {
+  color: #fff;
+}
+#sidebar a:hover {
+  color: #28353e;
+}
+#sidebar a:active {
+  color: #19a2f2 !important;
+} */
+#sidebar {
+  font-family: "Montserrat", sans-serif;
+}
+#sidebar i {
+  font-size: 18px;
+  font-weight: bolder;
+  margin-right: 20px;
+}
 /* Home */
 .tm-process-text {
   font-size: 12px !important;
@@ -15,25 +36,11 @@
   font-size: 12px;
 }
 /*message-options*/
-
-/* .index-company .tm-section-title {
-  font-family: "Lato", sans-serif;
-  font-size: 20px;
-  text-transform: capitalize;
-  color: #28353e;
-  margin-bottom: 10px;
-} */
 .index-company .icon {
   font-size: 10px !important;
   color: #19a2f2;
   width: 20px;
 }
-/* .index-company .tm-color-shadow {
-  font-family: "Montserrat", sans-serif;
-  font-size: 12px !important;
-  color: #000 !important;
-  font-weight: bold;
-} */
 .index-company .tm-color-dark {
   font-family: "Montserrat", sans-serif;
   font-size: 12px !important;
@@ -100,10 +107,6 @@
   margin: 0px;
   padding: 0px;
 }
-/* .index-company .admin-single-title {
-  font-family: "Lato", sans-serif;
-  font-size: 11px;
-} */
 .index-company .total {
   font-family: "Montserrat", sans-serif;
   text-align: center;
@@ -120,18 +123,6 @@
   font-size: 12px;
   margin-top: 5px;
   line-height: 1.5rem;
-}
-#sidebar {
-  font-family: "Lato", sans-serif;
-}
-#sidebar a:visited {
-  color: #fff;
-}
-#sidebar a:hover {
-  color: #28353e;
-}
-#sidebar a:active {
-  color: #19a2f2 !important;
 }
 .tm-box-info {
   font-family: "Montserrat", sans-serif;
