--- a/src/views/clinic-panel/partials/panel-navbar.ejs
+++ b/src/views/clinic-panel/partials/panel-navbar.ejs
@@ -1,13 +1,12 @@
 <nav class="navbar default-layout col-lg-12 col-12 p-0 fixed-top d-flex align-items-top flex-row">
   <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-start">
     <div class="me-3">
-      <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-bs-toggle="minimize">
-        <span class="icon-menu"></span>
+      <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-bs-toggle="minimize"><i class="bi bi-list p-2"></i>
       </button>
     </div>
     <div>
       <a class="navbar-brand brand-logo" href="/">Dialysing<span>.com</span> </a>
-      <!-- <a class="navbar-brand brand-logo-mini" href="../index.html">D</span></a> -->
+      <!-- <a class="navbar-brand brand-logo-mini" href="../index.html">D</span></a> -->   
     </div>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-top">
@@ -84,23 +83,13 @@
         </li>
         <% } %>
 
-          <li class="nav-item ms-auto name mx-3">
+          <li class="nav-item ms-auto name mx-3"><i class="bi bi-person-circle"></i>
             <%- user.nameSurname %>
           </li>
           <li class="nav-item ms-auto logout"><a href="/panel/logout">Çıkış Yap</a></li>
-          <li class="nav-item dropdown d-none d-lg-block user-dropdown mx-1">
-            <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
-              <svg class="img-xs rounded-circle" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-              </svg>
-            </a> 
-          </li>
     </ul>
-    <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center mt-4" type="button"
-      data-bs-toggle="offcanvas">
-      <span class="mdi mdi-menu"></span>
-    </button>
+    <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center mx-3" type="button"
+      data-bs-toggle="offcanvas"><i class="bi bi-list"></i></button>
   </div>
 </nav>
 
