--- a/src/views/clinic-panel/layouts/panel.ejs
+++ b/src/views/clinic-panel/layouts/panel.ejs
@@ -29,16 +29,11 @@
   <link rel="stylesheet" href="../user/css/style.css" />
   <link rel="stylesheet" href="../user/css/clinic/index.css" />
   <link rel="stylesheet" href="../user/css/panel.css">
-
   <!-- Fullcalendar css-->
   <link href='../admin/plugins/fullcalendar/fullcalendar.css' rel='stylesheet' />
   <link href='../admin/plugins/fullcalendar/fullcalendar.print.min.css' rel='stylesheet' media='print' />
-
-
   <!-- Bootstrap 5.0-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <link rel="stylesheet" href="../clinic-panel/css/vertical-layout-light/style.css" />
 </head>
 
@@ -54,9 +49,7 @@
 
           <%- body %>
 
-
-
-            <!-- partial -->
+        <!-- partial -->
       </div>
       <!-- main-panel ends -->
   </div>
