change banner sentences

--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -39,7 +39,7 @@
                   <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" /><span key="creditCard"> Kredi kartı yok</span></h6>
                 </div>
                 <div class="col col-lg-4 text-center">
-                  <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" /> <span key="cancelEasy"> Rezervasyon iptal kolaylığı</span></h6>
+                  <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" /> <span key="cancelEasy"> Kolayca rezervasyon iptali</span></h6>
                 </div>
               </div>
             </div>
