--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -157,7 +157,7 @@
       <div class="container ie-h-align-center-fix">
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 ml-auto mr-auto ie-container-width-fix text-center tm-header-content mt-5">
-            <div key="centerFindSearch" class="tm-header-title pr-5 px-5">Aradığınız diyaliz merkezini bulun</div>
+            <div key="centerFindSearch" class="tm-header-title pr-5 px-5">Aradığınız Diyaliz Merkezinizi Bulun</div>
             <div key="centerEasy" class="tm-header-text mt-2 pr-5 px-5">Diyaliz merkezi bulmanın en kolay yolu</div>
             <form action="/clinic/clinic-list" method="GET" class="tm-search-form tm-section-pad-2">
               <div class="form-row tm-search-form-row">
@@ -171,7 +171,7 @@
                   <img src="../user/img/icons/down.png" class="tm-form-element-icon-small icon-down dateicon" alt="Icon Down" />
                 </div>
                 <div class="form-group tm-form-element search">
-                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2 p-0"></i><span key="centerFind">Diyaliz Merkezinizi Bulun</span></button>
+                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2 p-0"></i><span key="centerFind">Diyaliz Bul</span></button>
                 </div>
               </div>
             </form>
@@ -188,7 +188,7 @@
                 </div>
                 <div class="col col-lg-4 text-center">
                   <h6 class="text-white"><img src="../user/img/icons/tick.png" class="img-fluid mx-1" alt="location" />
-                    <span key="cancelEasy">Kolay rezervasyon iptali</span>
+                    <span key="cancelEasy">Kolayca rezervasyon iptali</span>
                   </h6>
                 </div>
               </div>
