change default checkbox

--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -10,7 +10,7 @@
       <div class="container ie-h-align-center-fix">
         <div class="row">
           <div class="col-xs-12 ml-auto mr-auto ie-container-width-fix text-center tm-header-content">
-            <div class="tm-header-title"><span><%- city %> </span> Bölgesindeki Diyaliz Merkezleri</div>
+            <div class="tm-header-title"><span><%- city %> </span> Diyaliz Merkezleri</div>
             <div class="tm-header-text">Tarihlerinizi girin ve aradığınız lokasyona en yakın diyaliz merkezini bulun</div>
 
             <form action="/clinic/clinic-list" method="GET" class="tm-search-form pt-2">
