--- a/src/views/user/partials/filter.ejs
+++ b/src/views/user/partials/filter.ejs
@@ -32,9 +32,9 @@
       </div>
       <div class="tm-categories-subtitle">Diyaliz Tedavisi Tipi</div>
       <div class="form-group not-border checkbox">
-        <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="dialysisType" id="Hemodiyaliz" />
+        <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="dialysisType" id="Hemodiyaliz" checked />
         <label class="form-check-label selected" for="Hemodiyaliz"> Hemodiyaliz </label>
-      </div>
+      </div> 
       <div class="form-group not-border checkbox">
         <input class="form-check-input" type="checkbox" value="Hemodiyafiltrasyon" name="dialysisType" id="Hemodiyafiltrasyon" />
         <label class="form-check-label selected" for="Hemodiyafiltrasyon"> Hemodiyafiltrasyon </label>
