add ekle button

--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -267,6 +267,7 @@
                     sonuc.value = Number(sonuc.value) - 1;
                   }
                 </script>
+                <button type="button" class="btn-second">Ekle</button>
               </div>
             </div>
           </form>
